--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="text/stylesheet" href="/assets/css/reset.css">
+    <link rel="text/stylesheet" href="/assets/css/style.css">
+    <script type="text/javascript" src="/assets/javascript/game.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
     <title>The Crystal Collector</title>
 </head>
 <body>
