added header text, title, and basic paragraph tags to the main rules section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +10,32 @@
     <script type="text/javascript" src="/assets/javascript/game.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
-    <title>The Crystal Collector</title>
+    <title>The Alchemist's Apprentice</title>
 </head>
+
 <body>
-    <header></header>
+    <header>
+        <h1>The Alchemist's Apprentice</h1>
+    </header>
 
 
-    <section></section>
+    <section class="container">
+        <h2>The Rules</h2>
+        <p>You have been tasked with creating a series of magic potions.</p>
+        <p>The primary ingredients come from the four types of crystals which are native to the 4 kingdoms of the land.
+            Each has unique properties required to craft a number of magical outcomes.</p>
+        <p>The number given is the precise value you must achieve to complete the listed concontion.</p>
+        <p>Click on each crystal to add one to your current potion mix. Each one will get you closer to the required
+            number needed to complete your potion. Match the number exactly, and you will add one more magical potion to
+            your arsenal, but beware, as if you overdo it, the results could be disasterous!</p>
+        <p>Each crystal will add a differnt amount to your potion, but you won't know how much until you add it. Also,
+            each crystal will add a differnt amount to each potion. Pay attention as you add, and think carefully to
+            avoid overdoing it.</p>
+    </section>
 
 
     <footer></footer>
     <script></script>
 </body>
+
 </html>
