added line breaks in text. added divs for potion score and score panel. added img tags

--- a/index.html
+++ b/index.html
@@ -21,18 +21,33 @@
 
     <section class="container">
         <h2>The Rules</h2>
+        <br>
         <p>You have been tasked with creating a series of magic potions.</p>
+        <br>
         <p>The primary ingredients come from the four types of crystals which are native to the 4 kingdoms of the land.
             Each has unique properties required to craft a number of magical outcomes.</p>
+        <br>
         <p>The number given is the precise value you must achieve to complete the listed concontion.</p>
+        <br>
         <p>Click on each crystal to add one to your current potion mix. Each one will get you closer to the required
             number needed to complete your potion. Match the number exactly, and you will add one more magical potion to
             your arsenal, but beware, as if you overdo it, the results could be disasterous!</p>
+        <br>
         <p>Each crystal will add a differnt amount to your potion, but you won't know how much until you add it. Also,
             each crystal will add a differnt amount to each potion. Pay attention as you add, and think carefully to
             avoid overdoing it.</p>
     </section>
 
+    <div id="potion-score"></div>
+    <div id="score-panel"></div>
+
+    <img src="/assets/images/grant-durr--PvZUBrJarM-unsplash.jpg">
+    <img src="/assets/images/ilze-lucero-jLWLxX6i3R8-unsplash.jpg">
+    <img src="/assets/images/jason-d--XvhrIC1Mhc-unsplash.jpg">
+    <img src="/assets/images/jason-d-JKRXPwUoFt0-unsplash.jpg">
+
+    <p>Potion progress:</p>
+    <div id="potion-progress"></div>
 
     <footer></footer>
     <script></script>
