added card classification to images and added card deck to get them to fall in line.

--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
     </section>
 
     <div id="potion-score"></div>
+  
     <div id="score-panel"></div>
-
-    <img src="/assets/images/grant-durr--PvZUBrJarM-unsplash.jpg">
-    <img src="/assets/images/ilze-lucero-jLWLxX6i3R8-unsplash.jpg">
-    <img src="/assets/images/jason-d--XvhrIC1Mhc-unsplash.jpg">
-    <img src="/assets/images/jason-d-JKRXPwUoFt0-unsplash.jpg">
+  
+    <div class="card-deck">
+        <img id="magnesium-pyrite" src="/assets/images/grant-durr--PvZUBrJarM-unsplash.jpg" class="card">
+        <img id= "amethyst" src="/assets/images/ilze-lucero-jLWLxX6i3R8-unsplash.jpg" class="card">
+        <img id="dragon-glass" src="/assets/images/jason-d--XvhrIC1Mhc-unsplash.jpg" class="card">
+        <img id="heartstone" src="/assets/images/jason-d-JKRXPwUoFt0-unsplash.jpg" class="card">
+    </div>
 
     <p>Potion progress:</p>
     <div id="potion-progress"></div>
