added styling and resized images to better fit the page

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
   
     <div id="score-panel"></div>
   
-    <div class="card-deck">
-        <img id="magnesium-pyrite" src="/assets/images/grant-durr--PvZUBrJarM-unsplash.jpg" class="card">
-        <img id= "amethyst" src="/assets/images/ilze-lucero-jLWLxX6i3R8-unsplash.jpg" class="card">
-        <img id="dragon-glass" src="/assets/images/jason-d--XvhrIC1Mhc-unsplash.jpg" class="card">
-        <img id="heartstone" src="/assets/images/jason-d-JKRXPwUoFt0-unsplash.jpg" class="card">
+    <div class="row">
+        <img id="magnesium-pyrite" src="/assets/images/grant-durr--PvZUBrJarM-unsplash.jpg" class="p-4">
+        <img id= "amethyst" src="/assets/images/ilze-lucero-jLWLxX6i3R8-unsplash.jpg" class="p-4">
+        <img id="dragon-glass" src="/assets/images/jason-d--XvhrIC1Mhc-unsplash.jpg" class="p-4">
+        <img id="heartstone" src="/assets/images/jason-d-JKRXPwUoFt0-unsplash.jpg" class="p-4">
     </div>
 
     <p>Potion progress:</p>
