added containers and styling to center button images

--- a/index.html
+++ b/index.html
@@ -42,15 +42,19 @@
   
     <div id="score-panel"></div>
   
-    <div class="row">
-        <img id="magnesium-pyrite" src="/assets/images/grant-durr--PvZUBrJarM-unsplash.jpg" class="p-4">
-        <img id= "amethyst" src="/assets/images/ilze-lucero-jLWLxX6i3R8-unsplash.jpg" class="p-4">
-        <img id="dragon-glass" src="/assets/images/jason-d--XvhrIC1Mhc-unsplash.jpg" class="p-4">
-        <img id="heartstone" src="/assets/images/jason-d-JKRXPwUoFt0-unsplash.jpg" class="p-4">
-    </div>
+    <section class="container">
+        <div class="row text-center">
+            <img id="magnesium-pyrite" src="/assets/images/grant-durr--PvZUBrJarM-unsplash.jpg" class="p-4">
+            <img id= "amethyst" src="/assets/images/ilze-lucero-jLWLxX6i3R8-unsplash.jpg" class="p-4">
+            <img id="dragon-glass" src="/assets/images/jason-d--XvhrIC1Mhc-unsplash.jpg" class="p-4">
+            <img id="heartstone" src="/assets/images/jason-d-JKRXPwUoFt0-unsplash.jpg" class="p-4">
+        </div>
+    </section>
 
-    <p>Potion progress:</p>
-    <div id="potion-progress"></div>
+    <section class="container">
+        <p>Potion progress:</p>
+        <div id="potion-progress"></div>
+    </section>
 
     <footer></footer>
     <script></script>
