fixed spelling errors in rules text.

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <p>The primary ingredients come from the four types of crystals which are native to the 4 kingdoms of the land.
             Each has unique properties required to craft a number of magical outcomes.</p>
         <br>
-        <p>The number given is the precise value you must achieve to complete the listed concontion.</p>
+        <p>The number given is the precise value you must achieve to complete the listed concoction.</p>
         <br>
         <p>Click on each crystal to add one to your current potion mix. Each one will get you closer to the required
             number needed to complete your potion. Match the number exactly, and you will add one more magical potion to
-            your arsenal, but beware, as if you overdo it, the results could be disasterous!</p>
+            your arsenal, but beware, as if you overdo it, the results could be disastrous!</p>
         <br>
-        <p>Each crystal will add a differnt amount to your potion, but you won't know how much until you add it. Also,
-            each crystal will add a differnt amount to each potion. Pay attention as you add, and think carefully to
+        <p>Each crystal will add a different amount to your potion, but you won't know how much until you add it. Also,
+            each crystal will add a different amount to each potion. Pay attention as you add, and think carefully to
             avoid overdoing it.</p>
     </section>
 
