added google font link and font styles to headings

--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="text/stylesheet" href="/assets/css/reset.css">
-    <link rel="text/stylesheet" href="/assets/css/style.css">
-    <script type="text/javascript" src="/assets/javascript/game.js"></script>
+    <link rel="stylesheet" href="./assets/css/reset.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <script type="text/javascript" src="./assets/javascript/game.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
+    <link href="https://fonts.googleapis.com/css?family=Almendra|MedievalSharp&display=swap" rel="stylesheet">
     <title>The Alchemist's Apprentice</title>
 </head>
 
 <body>
     <header class="container">
-        <h1>The Alchemist's Apprentice</h1>
+        <h1 style="font-family: 'MedievalSharp', cursive;">The Alchemist's Apprentice</h1>
     </header>
 
 
     <section class="container">
-        <h2>The Rules</h2>
+        <h2 style="font-family: 'MedievalSharp', cursive;">The Rules</h2>
         <br>
         <p>You have been tasked with creating a series of magic potions.</p>
         <br>
