added sticky footer code and link to dungeonmaster site. added styling to text and link

--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
     </section>
 
     <div id="potion-score"></div>
-  
+
     <div id="score-panel"></div>
-  
+
     <section class="container">
         <div class="row text-center">
             <img id="magnesium-pyrite" src="/assets/images/grant-durr--PvZUBrJarM-unsplash.jpg" class="p-4">
-            <img id= "amethyst" src="/assets/images/ilze-lucero-jLWLxX6i3R8-unsplash.jpg" class="p-4">
+            <img id="amethyst" src="/assets/images/ilze-lucero-jLWLxX6i3R8-unsplash.jpg" class="p-4">
             <img id="dragon-glass" src="/assets/images/jason-d--XvhrIC1Mhc-unsplash.jpg" class="p-4">
             <img id="heartstone" src="/assets/images/jason-d-JKRXPwUoFt0-unsplash.jpg" class="p-4">
         </div>
@@ -56,7 +56,12 @@
         <div id="potion-progress"></div>
     </section>
 
-    <footer></footer>
+    <footer class="footer mt-auto py-3">
+        <div class="container">
+            <span class="text-white">Want even more adventures? <a href="https://brianallen2401.wixsite.com/mysite"
+                    target="_blank" class="text-decoration-none">https://brianallen2401.wixsite.com/mysite</a></span>
+        </div>
+    </footer>
     <script></script>
 </body>
 
