added audio credit and commented out for use later

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <title>The Alchemist's Apprentice</title>
 </head>
 
+<!-- Music from https://filmmusic.io
+"Sneaky Snitch" by Kevin MacLeod (https://incompetech.com)
+License: CC BY (http://creativecommons.org/licenses/by/4.0/) -->
+
 <body>
     <header class="container">
         <h1 style="font-family: 'MedievalSharp', cursive;">The Alchemist's Apprentice</h1>
