added audio tag with controls above footer. Included credits commented out in code.

--- a/index.html
+++ b/index.html
@@ -13,15 +13,11 @@
     <title>The Alchemist's Apprentice</title>
 </head>
 
-<!-- Music from https://filmmusic.io
-"Sneaky Snitch" by Kevin MacLeod (https://incompetech.com)
-License: CC BY (http://creativecommons.org/licenses/by/4.0/) -->
 
 <body>
     <header class="container">
         <h1 style="font-family: 'MedievalSharp', cursive;">The Alchemist's Apprentice</h1>
     </header>
-
 
     <section class="container">
         <h2 style="font-family: 'MedievalSharp', cursive;">The Rules</h2>
@@ -56,17 +52,27 @@ License: CC BY (http://creativecommons.org/licenses/by/4.0/) -->
     </section>
 
     <section class="container">
-        <p>Potion progress:</p>
-        <div id="potion-progress"></div>
+    <p>Potion progress:</p>
+    <div id="potion-progress"></div>
     </section>
 
-    <footer class="footer mt-auto py-3">
-        <div class="container">
-            <span class="text-white">Want even more adventures? <a href="https://brianallen2401.wixsite.com/mysite"
-                    target="_blank" class="text-decoration-none">https://brianallen2401.wixsite.com/mysite</a></span>
-        </div>
-    </footer>
-    <script></script>
+    <audio controls class="">
+        <source src="./assets/audio/4384-sneaky-snitch-by-kevin-macleod.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+        <!-- Music from https://filmmusic.io
+        "Sneaky Snitch" by Kevin MacLeod (https://incompetech.com)
+        License: CC BY (http://creativecommons.org/licenses/by/4.0/) -->
+    </audio>
+
+    <section class="container">
+        <footer class="footer mt-auto py-3">
+            <div class="container">
+                <span class="text-white">Want even more adventures? <a href="https://brianallen2401.wixsite.com/mysite"
+                        target="_blank"
+                        class="text-decoration-none">https://brianallen2401.wixsite.com/mysite</a></span>
+            </div>
+        </footer>
+        <script></script>
 </body>
 
 </html>
