added card data and styling alongside text as well as added button elements to images

--- a/index.html
+++ b/index.html
@@ -43,17 +43,37 @@
     <div id="score-panel"></div>
 
     <section class="container">
-        <div class="row text-center">
-            <img id="magnesium-pyrite" src="/assets/images/grant-durr--PvZUBrJarM-unsplash.jpg" class="p-4">
-            <img id="amethyst" src="/assets/images/ilze-lucero-jLWLxX6i3R8-unsplash.jpg" class="p-4">
-            <img id="dragon-glass" src="/assets/images/jason-d--XvhrIC1Mhc-unsplash.jpg" class="p-4">
-            <img id="heartstone" src="/assets/images/jason-d-JKRXPwUoFt0-unsplash.jpg" class="p-4">
+        <div class="row">
+            <button id="magnesium-pyrite" class="card text-center">
+                <div class="card-body">
+                    <img  src="/assets/images/grant-durr--PvZUBrJarM-unsplash.jpg" class="p-1">
+                    <p class="card-text">Magnesium Pyrite</p>
+                </div>
+            </button>
+            <button id="amethyst" class="card text-center">
+                <div class="card-body">
+                <img  src="/assets/images/ilze-lucero-jLWLxX6i3R8-unsplash.jpg" class="p-1">
+                <p class="card-text">Amethyst</p>
+            </div>
+         </button>
+            <button id="dragon-glass" class="card text-center">
+                <div class="card-body">
+                    <img  src="/assets/images/jason-d--XvhrIC1Mhc-unsplash.jpg" class="p-1">
+                    <p class="card-text">Dragon Glass</p>
+                </div>
+            </button>
+            <button id="heartstone" class="card text-center">
+                <div class="card-body">
+                    <img  src="/assets/images/jason-d-JKRXPwUoFt0-unsplash.jpg" class="p-1">
+                    <p class="card-text">Heartstone</p>
+                </div>
+            </button>
         </div>
     </section>
 
     <section class="container">
-    <p>Potion progress:</p>
-    <div id="potion-progress"></div>
+        <p>Potion progress:</p>
+        <div id="potion-progress"></div>
     </section>
 
     <audio controls class="">
