added box, alignment and sizing to header text

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 
 <body>
-    <header class="container">
-        <h1 style="font-family: 'MedievalSharp', cursive;">The Alchemist's Apprentice</h1>
+    <header class="container jumbotron">
+        <h1 style="font-family: 'MedievalSharp', cursive;" class="display-3 text-center">The Alchemist's Apprentice</h1>
     </header>
 
     <section class="container">
