added id to final paragraph of rules. added styling to class of rules container

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 style="font-family: 'MedievalSharp', cursive;" class="display-3 text-center">The Alchemist's Apprentice</h1>
     </header>
 
-    <section class="container">
+    <section class="container bg-light" id="rules">
         <h2 style="font-family: 'MedievalSharp', cursive;">The Rules</h2>
         <br>
         <p>You have been tasked with creating a series of magic potions.</p>
@@ -33,7 +33,7 @@
             number needed to complete your potion. Match the number exactly, and you will add one more magical potion to
             your arsenal, but beware, as if you overdo it, the results could be disastrous!</p>
         <br>
-        <p>Each crystal will add a different amount to your potion, but you won't know how much until you add it. Also,
+        <p id="finalsection">Each crystal will add a different amount to your potion, but you won't know how much until you add it. Also,
             each crystal will add a different amount to each potion. Pay attention as you add, and think carefully to
             avoid overdoing it.</p>
     </section>
