added card-deck styling to buttons. added background and text color to rules.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 style="font-family: 'MedievalSharp', cursive;" class="display-3 text-center">The Alchemist's Apprentice</h1>
     </header>
 
-    <section class="container bg-light" id="rules">
+    <section class="container bg-dark text-white" id="rules">
         <h2 style="font-family: 'MedievalSharp', cursive;">The Rules</h2>
         <br>
         <p>You have been tasked with creating a series of magic potions.</p>
@@ -43,7 +43,7 @@
     <div id="score-panel"></div>
 
     <section class="container">
-        <div class="row">
+        <div class="row card-deck">
             <button id="magnesium-pyrite" class="card text-center">
                 <div class="card-body">
                     <img  src="/assets/images/grant-durr--PvZUBrJarM-unsplash.jpg" class="p-1">
