added backgrounds, and text fields and spacing/styling for potion-score field and win/loss tracking

--- a/index.html
+++ b/index.html
@@ -37,34 +37,47 @@
             each crystal will add a different amount to each potion. Pay attention as you add, and think carefully to
             avoid overdoing it.</p>
     </section>
+    <section class="container">
+        <div class="row card-deck mb-3">
+            <div class="card text-center bg-dark text-white">
+                <div class="card-body">
+                    <p id="potion-score" class="card-title"></p>
+                    <!-- <img src="./assets/images/cauldron-4564688_1920.png" class=""> -->
+                </div>
+            </div>
+            <div class="card text-center bg-success">
+                <div class="card-body">
+                    <p id="wins" class="card-text">TEXT GOES HERE</p>
+                    <p id="losses" class="card-text">TEXT GOES HERE</p>
+                </div>
 
-    <div id="potion-score"></div>
-
-    <div id="score-panel"></div>
+            </div>
+        </div>
+    </section>
 
     <section class="container">
         <div class="row card-deck">
             <button id="magnesium-pyrite" class="card text-center">
                 <div class="card-body">
-                    <img  src="/assets/images/grant-durr--PvZUBrJarM-unsplash.jpg" class="p-1">
+                    <img  src="./assets/images/grant-durr--PvZUBrJarM-unsplash.jpg" class="p-1">
                     <p class="card-text">Magnesium Pyrite</p>
                 </div>
             </button>
             <button id="amethyst" class="card text-center">
                 <div class="card-body">
-                <img  src="/assets/images/ilze-lucero-jLWLxX6i3R8-unsplash.jpg" class="p-1">
+                <img  src="./assets/images/ilze-lucero-jLWLxX6i3R8-unsplash.jpg" class="p-1">
                 <p class="card-text">Amethyst</p>
             </div>
          </button>
             <button id="dragon-glass" class="card text-center">
                 <div class="card-body">
-                    <img  src="/assets/images/jason-d--XvhrIC1Mhc-unsplash.jpg" class="p-1">
+                    <img  src="./assets/images/jason-d--XvhrIC1Mhc-unsplash.jpg" class="p-1">
                     <p class="card-text">Dragon Glass</p>
                 </div>
             </button>
             <button id="heartstone" class="card text-center">
                 <div class="card-body">
-                    <img  src="/assets/images/jason-d-JKRXPwUoFt0-unsplash.jpg" class="p-1">
+                    <img  src="./assets/images/jason-d-JKRXPwUoFt0-unsplash.jpg" class="p-1">
                     <p class="card-text">Heartstone</p>
                 </div>
             </button>
