--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         <div class="row card-deck mt-4">
             <div class="card">
                 <div class="card-body text-white bg-dark">
-                    <p class="card-title">Potion progress:</p>
-                    <div id="potion-progress" class="card-subtitle"></div>
+                    <p class="display-4">Potion progress:</p>
+                    <div id="potion-progress" class="card-subtitle display-3"></div>
                 </div>
             </div>
             <div class="card">
