added jquery library link in heading. linked to game.js in script tags

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="./assets/javascript/game.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Almendra|MedievalSharp&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>The Alchemist's Apprentice</title>
 </head>
 
@@ -115,7 +116,7 @@
                         class="text-decoration-none">https://brianallen2401.wixsite.com/mysite</a></span>
             </div>
         </footer>
-        <script></script>
+        <script src="./assets/javascript/game.js"></script>
 </body>
 
 </html>
