add display class to potion score so it is easier to read/see

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="row card-deck mb-3">
             <div class="card text-center bg-dark text-white">
                 <div class="card-body">
-                    <p id="potion-score" class="card-title"></p>
+                    <p id="potion-score" class="card-title display-4"></p>
                 </div>
             </div>
             <div class="card text-center bg-success">
