--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             </div>
             <div class="card text-center bg-success">
                 <div class="card-body">
-                    <p id="wins" class="card-text"></p>
-                    <p id="losses" class="card-text"></p>
+                    <p id="wins" class="card-text display-4"></p>
+                    <p id="losses" class="card-text display-4"></p>
                 </div>
             </div>
         </div>
