moved audio tag to header, and added id. removed controls and styling

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 <body>
     <header class="container jumbotron">
         <h1 style="font-family: 'MedievalSharp', cursive;" class="display-3 text-center">The Alchemist's Apprentice</h1>
+        <audio id="background-music">
+            <source src="./assets/audio/4384-sneaky-snitch-by-kevin-macleod.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+            <!-- Music from https://filmmusic.io
+            "Sneaky Snitch" by Kevin MacLeod (https://incompetech.com)
+            License: CC BY (http://creativecommons.org/licenses/by/4.0/) -->
+        </audio>
     </header>
 
     <section class="container bg-dark text-white" id="rules">
@@ -94,19 +101,13 @@
             </div>
             <div class="card">
                 <div class="card-body bg-dark">
-                 <img src="./assets/images/cauldron-4564688_1920.png" class="card-img-top">
+                    <img src="./assets/images/cauldron-4564688_1920.png" class="card-img-top">
                 </div>
             </div>
         </div>
     </section>
 
-    <audio controls class="m-5">
-        <source src="./assets/audio/4384-sneaky-snitch-by-kevin-macleod.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-        <!-- Music from https://filmmusic.io
-        "Sneaky Snitch" by Kevin MacLeod (https://incompetech.com)
-        License: CC BY (http://creativecommons.org/licenses/by/4.0/) -->
-    </audio>
+
 
     <section class="container">
         <footer class="footer mt-auto py-3">
