added audio tags to document for the explosion sound to be used on a loss state triggered.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         </audio>
     </header>
 
+    <audio id="explosion">
+        <source src="./assets/audio/246150__robinhood76__05152-twisted-spell-explosion.wav" type="audio/wav">
+    </audio>
+
     <section class="container bg-dark text-white" id="rules">
         <h2 style="font-family: 'MedievalSharp', cursive;">The Rules</h2>
         <br>
@@ -101,7 +105,7 @@
             </div>
             <div class="card">
                 <div class="card-body bg-dark">
-                    <img src="./assets/images/cauldron-4564688_1920.png" class="card-img-top">
+                    <img src="./assets/images/cauldron-4564688_1920.png" class="card-img-top" id="brewing">
                 </div>
             </div>
         </div>
