added audio tag for success sound effect

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <audio id="explosion">
         <source src="./assets/audio/246150__robinhood76__05152-twisted-spell-explosion.wav" type="audio/wav">
     </audio>
+    <audio id="success">
+        <source src="./assets/audio/456966__funwithsound__success-fanfare-trumpets.mp3" type="audio/mpeg">
+    </audio>
 
     <section class="container bg-dark text-white" id="rules">
         <h2 style="font-family: 'MedievalSharp', cursive;">The Rules</h2>
