added loop property to background music audio.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header class="container jumbotron">
         <h1 style="font-family: 'MedievalSharp', cursive;" class="display-3 text-center">The Alchemist's Apprentice</h1>
-        <audio id="background-music">
+        <audio loop id="background-music">
             <source src="./assets/audio/4384-sneaky-snitch-by-kevin-macleod.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
             <!-- Music from https://filmmusic.io
