--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <audio id="success">
         <source src="./assets/audio/456966__funwithsound__success-fanfare-trumpets.mp3" type="audio/mpeg">
     </audio>
+    <audio id="crystalAdd">
+        <source src="./assets/audio/416710__inspectorj__splash-small-a.wav" type="audio/wav">
+    </audio>
 
     <section class="container bg-dark text-white" id="rules">
         <h2 style="font-family: 'MedievalSharp', cursive;">The Rules</h2>
