changed link to edited sound file.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <source src="./assets/audio/456966__funwithsound__success-fanfare-trumpets.mp3" type="audio/mpeg">
     </audio>
     <audio id="crystalAdd">
-        <source src="./assets/audio/416710__inspectorj__splash-small-a.wav" type="audio/wav">
+        <source src="./assets/audio/splash.wav" type="audio/wav">
     </audio>
 
     <section class="container bg-dark text-white" id="rules">
