added missing closing section tag to footer

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
             </div>
         </footer>
         <script src="./assets/javascript/game.js"></script>
+    </section>
 </body>
 
 </html>
