removed direct image links, and added id to div for dynamic insertion from js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <title>The Alchemist's Apprentice</title>
 </head>
 
-
 <body>
     <header class="container jumbotron">
         <h1 style="font-family: 'MedievalSharp', cursive;" class="display-3 text-center">The Alchemist's Apprentice</h1>
@@ -110,14 +109,11 @@
                 </div>
             </div>
             <div class="card">
-                <div class="card-body bg-dark">
-                    <img src="./assets/images/cauldron-4564688_1920.png" class="card-img-top" id="brewing">
+                <div class="card-body bg-dark" id="brewing">
                 </div>
             </div>
         </div>
     </section>
-
-
 
     <section class="container">
         <footer class="footer mt-auto py-3">
