added <p> tag and id to display potion type into

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <div class="card text-center bg-dark text-white">
                 <div class="card-body">
                     <p id="potion-score" class="card-title display-4"></p>
+                    <p id="p-i-p" class="card-title"></p>
                 </div>
             </div>
             <div class="card text-center bg-success">
