added link to fontawesome and note on readme as well as files for favicon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script type="text/javascript" src="./assets/javascript/game.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Almendra|MedievalSharp&display=swap" rel="stylesheet">
+    <link rel="icon" href="./assets/images/book-dead-solid.svg" type="image/svg" sizes="any">
+    <script src="https://kit.fontawesome.com/6a9dea6d2f.js" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <title>The Alchemist's Apprentice</title>
 </head>
